# TotpTrajectories

./: .gitignore  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  Example.cpp  Example.py  PlotResult.py  Segment1.txt  TotpExample.cpp  Waypoints.txt  out.txt
Src/: CMakeLists.txt
Src/Totp/: CMakeLists.txt
